# hacklanta-v0

./: .gitignore  .prettierignore  CLAUDE.md  IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  README.md  TESTING.md  TODOs.md  TTEAM_MATCHER_IMPLEMENTATION_PLAN.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  removing_aws.md  turbo.json
infra/: README.md  (+2 more)
services/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 2cbdb5dd7a3e_add_sms_opt_in_to_applications.py  6af66d3b27d6_merge_heads.py  97d1b8c8bdab_add_team_join_requests_table.py  a7f3c9e21b04_make_user_id_nullable_add_tally_response_.py  b7d1a2c3e4f5_add_acceptance_sent_at_to_users.py  c5af14dc13fa_initial_schema.py  fdd051410d8c_add_contact_info_legal_agreements_and_.py
services/api/app/: main.py
services/api/app/core/: config.py  database.py  middleware.py  security.py  turnstile.py
services/api/app/domains/admin/: router.py  schemas.py  service.py
services/api/app/domains/announcements/: models.py  repository.py  router.py  schemas.py  service.py
services/api/app/domains/applicants/: models.py  repository.py  router.py  schemas.py  service.py  webhook.py
services/api/app/domains/contestants/: models.py  repository.py  router.py  schemas.py  service.py
services/api/app/utils/: email.py  models.py  pagination.py  s3.py
services/api/app/workers/: celery_app.py  email_tasks.py
services/api/scripts/: accept_all_users.py
services/api/tests/: conftest.py  test_applications.py  test_auth.py
(+193 files in other folders)
